# opens3-bios

./: CMakeLists.txt  LICENSE  README.md  partitions.csv  sdkconfig.defaults
components/: n
components/bios_core/: CMakeLists.txt  bios_init.c
components/bios_core/include/: bios_core.h
components/boot_manager/: CMakeLists.txt  boot_menu.c
components/boot_manager/include/: boot_manager.h  opens3_abi.h
components/led_mgmt/: CMakeLists.txt  led_mgmt.c
components/led_mgmt/include/: led_mgmt.h
components/management_engine/: CMakeLists.txt  management_  management_engine.c  management_engine_s3.c
components/management_engine/include/: management_engine.h  me_shared.h
components/management_engine/ulp/: lp_core_main.c
components/nvram/: CMakeLists.txt  nvram.c  nvram_defaults.c
components/nvram/include/: nvram.h  nvram_schema.h
components/opens3_fs/: CMakeLists.txt  hal_flash.c  opens3_fs.c
components/opens3_fs/include/: hal_flash.h  opens3_fs.h
components/power_mgmt/: CMakeLists.txt  power_governor.c  power_tweaker.c
components/power_mgmt/include/: power_tweaker.h
components/pxe_boot/: CMakeLists.txt  pxe_boot.c
components/pxe_boot/include/: pxe_boot.h
components/web_ui/: CMakeLists.txt  web_server.c
components/web_ui/include/: web_ui.h
components/web_ui/www/: index.html
components/wifi_mgmt/: CMakeLists.txt  wifi_mgmt.c
components/wifi_mgmt/include/: wifi_mgmt.h
docs/: bios_core.md  bios_setup_web_ui.md  boot_manager.md  led_management.md  main_entry_point.md  management_engine.md  nvram.md  openc6_fs.md  payload_development_serial_boot.md  power_management.md  pxe_network_boot.md  wifi_management.md
main/: idf_component.yml  main.c
tools/: CMakeLists.txt  openc6_loader.cpp  payload.ld
tools/example/: payload.c
